syntax = "proto3";

/* 注意事项:
 * package 和 option 是固定的，不可更改
 * service、rpc方法、message、enum的命名须符合PascalCase规范
 * service名称必须以Service结尾
 * 入参的message必须以Request结果
 * 出参的message必须以Response结尾，切前2个字段必须是return_code和return_msg
 * message的字段命名须符合lower_snake_case
 * 枚举项全部大写，且至少有一个，枚举序号必须从0开始
 * 字段常用的基础数据类型:double、float、int32、int64、bool、string、bytes
 * 一旦将文件提交至大仓，不得再对service名、rpc方法名、message名以及字段名、字段类型、字段序号进行修改
 */

package autohome.rpc.car.app_cars.v1.carbase;
option java_multiple_files = true;
option java_outer_classname = "SeriesListProto";
option java_package = "autohome.rpc.car.app_cars.v1.carbase";
option go_package = "git.corpautohome.com/microservice/go-genproto/autohome/rpc/car/app_cars/v1/carbase;carbase";
option csharp_namespace = "autohome.rpc.car.app_cars.v1.carbase";


/**
  * 车系列表接口
  * 维护人: shicuining
  * 生产环境 - 主机: car_app_cars.grpc.corpautohome.com
  * 预发环境 - 主机: car_app_cars.thallo.corpautohome.com
  * 测试环境 - 主机: car_app_cars.terra.corpautohome.com
 */
service SeriesListService {
  /**
    * 车系列表接口
    * 维护人:石翠宁
    */
  rpc SeriesListBaseInfo (SeriesListBaseInfoRequest) returns (SeriesListBaseInfoResponse) {}
}

message SeriesListBaseInfoRequest {
  //品牌id
  int32 brandid = 1 ;

  //1 ios,2 android
  int32 pm = 2 ;

  int32 cityid = 3 ;

  //插件版本
  string pluginversion = 4 ;

  //设备号
  string deviceid = 5 ;
  //个性化查询id
  string queryid = 6 ;
  //个性化开关
  int32 recommendswitch = 7;
  //入口来源
  string source = 8;
}

message SeriesListBaseInfoResponse{
  int32 return_code = 1 [json_name = "returncode"];
  string return_msg = 2 [json_name = "message"];
  Result result = 3;

  message Result{
    repeated Allfctinfo allfctinfo = 1;
    repeated Alllevelinfo alllevelinfo = 2;
    string brandicon = 3;
    string brandname = 4;
    repeated Orderinfolist orderinfolist = 5;
    Pvdata pvdata = 6;
    string rightlink = 7;
    string rightname = 8;
    repeated Serieslist serieslist = 9;
    string serieslistrcmpvid = 10;

    message Orderinfolist{
      string type = 1;
      string name = 2;
    }

    message Allfctinfo{
      int32 fctid = 1;
      int32 levelid = 2;
      string levelname = 3;
      int32 sort = 4;
    }

    message Serieslist{
      Data data = 1;
      int32 type = 2;

      message Data{
        int32 drivetype = 1;
        int32 energytype = 2;
        int32 fctid = 3;
        string fueltypes = 4;
        int32 id = 5;
        string imgurl = 6;
        int32 levelid = 7;
        string levelname = 8;
        string linkurl = 9;
        int32 miniprice = 10;
        string name = 11;
        string newenergypricetip = 12;
        repeated int32 order = 13;
        string price = 14;
        Pvdata pvdata = 15;
        int32 sort = 16;
        int32 state = 17;

        message Pvdata{
          string object_id = 1 [json_name = "object_id"];
          string p = 2;
          string pvid = 3;
          string stra = 4;
          string t = 5;
        }
      }
    }

    message Alllevelinfo{
      int32 fctid = 1;
      int32 levelid = 2;
      string levelname = 3;
      int32 sort = 4;
    }

    message Pvdata{
      repeated Requestpvarg requestpvargs = 1;

      message Requestpvarg{
        string argkey = 1;
        string argvalue = 2;
      }
    }
  }
}
